{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 34,
  "lineage": "0614875e-82b3-92ab-fa8b-93b25782fbdc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "way_out_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:179530787873:internet-gateway/igw-000f937049f9446c7",
            "id": "igw-000f937049f9446c7",
            "owner_id": "179530787873",
            "tags": {
              "Environment": "prod",
              "Name": "way_out_igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "way_out_igw"
            },
            "vpc_id": "vpc-0736172d818fea3f4"
          },
          "dependencies": [
            "aws_vpc.way_out_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "way_out_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:179530787873:route-table/rtb-0016c2596a6ced89e",
            "id": "rtb-0016c2596a6ced89e",
            "owner_id": "179530787873",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000f937049f9446c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "way_out_public_route_table"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "way_out_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0736172d818fea3f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.way_out_igw",
            "aws_vpc.way_out_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "way_out_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062324f8a703174db",
            "route_table_id": "rtb-0016c2596a6ced89e",
            "subnet_id": "subnet-09697e79129287df3"
          },
          "dependencies": [
            "aws_internet_gateway.way_out_igw",
            "aws_route_table.way_out_public_route_table",
            "aws_subnet.way_out_public_subnet",
            "aws_vpc.way_out_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "way_out_public_route_table_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0bc9aca1527a72b",
            "route_table_id": "rtb-0016c2596a6ced89e",
            "subnet_id": "subnet-08f7d7b9e868e076d"
          },
          "dependencies": [
            "aws_internet_gateway.way_out_igw",
            "aws_route_table.way_out_public_route_table",
            "aws_subnet.way_out_public_subnet2",
            "aws_vpc.way_out_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "way_out_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:179530787873:security-group/sg-0d95592f6584eea60",
            "description": "Allow access to the way_out_db instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d95592f6584eea60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "way_out_db_sg",
            "name_prefix": "",
            "owner_id": "179530787873",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0736172d818fea3f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.way_out_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "way_out_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:179530787873:subnet/subnet-09697e79129287df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09697e79129287df3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179530787873",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "way_out_public_subnet"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "way_out_public_subnet"
            },
            "vpc_id": "vpc-0736172d818fea3f4"
          },
          "dependencies": [
            "aws_vpc.way_out_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "way_out_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:179530787873:subnet/subnet-08f7d7b9e868e076d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f7d7b9e868e076d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179530787873",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "way_out_public_subnet2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "way_out_public_subnet2"
            },
            "vpc_id": "vpc-0736172d818fea3f4"
          },
          "dependencies": [
            "aws_vpc.way_out_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "way_out_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:179530787873:vpc/vpc-0736172d818fea3f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063ef85619b15d2e1",
            "default_route_table_id": "rtb-0735b84909d0ac365",
            "default_security_group_id": "sg-0324f06b9b70d56ac",
            "dhcp_options_id": "dopt-0e5ad159ca99c5d00",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0736172d818fea3f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0735b84909d0ac365",
            "owner_id": "179530787873",
            "tags": {
              "Environment": "prod",
              "Name": "way_out_vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "way_out_vpc"
            }
          }
        }
      ]
    }
  ]
}